Bug 13612 - the kernel oops when registering the ACPI proc I/F for the processors that use the same processor bus id
Summary: the kernel oops when registering the ACPI proc I/F for the processors that us...
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Config-Processors (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: ykzhao
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-24 03:21 UTC by ykzhao
Modified: 2009-06-25 16:03 UTC (History)
3 users (show)

See Also:
Kernel Version: 2.6.29 & 2.6.30
Subsystem:
Regression: No
Bisected commit-id:


Attachments
the dmesg log on the 2.6.30-rc4 (148.33 KB, application/octet-stream)
2009-06-24 03:21 UTC, ykzhao
Details
re-name the acpi processor bus id (2.18 KB, patch)
2009-06-24 03:41 UTC, ykzhao
Details | Diff

Description ykzhao 2009-06-24 03:21:18 UTC
Created attachment 22073 [details]
the dmesg log on the 2.6.30-rc4

On some boxes several processors use the same processor bus id.But they are located in different scope. For example:
        \_SB.SCK0.CPU0
        \_SB.SCK1.CPU0
        As they use the same bus id, OS will complain the OOPS when registering the acpi proc I/F for the processors that use the same bus id.
Comment 1 Zhang Rui 2009-06-24 03:41:33 UTC
http://marc.info/?l=linux-acpi&m=124323404303904&w=2
patch is already available and len just shipped it in acpi tree.
Comment 2 ykzhao 2009-06-24 03:41:44 UTC
Created attachment 22074 [details]
re-name the acpi processor bus id
Comment 3 Len Brown 2009-06-24 05:18:34 UTC
patch in comment #2 applied to acpi tree
Comment 4 Len Brown 2009-06-25 16:03:19 UTC
shipped in 2.6.31-rc1
closed

Note You need to log in before you can comment on or make changes to this bug.